Cambios en la logica de empleado para que pueda tener distintos roles segun la posicion dentro de la jerarquia de la empresa (restaurante)